[tool.poetry]
name = "slackinviterequesthandler"
version = "0.1.0"
description = ""
authors = ["Jens Tinglev <tinglev@kth.se>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
requests = "^2.24"
green = "^3.2.3"
mock = "^4.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
